--- a/homeworks/Andrii.Morozov_AndriiMorozov88/8-css-variables/index_variables.html
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/8-css-variables/index_variables.html
@@ -72,8 +72,10 @@
                 </picture>
             </div>
         </div>
-        <h2 class="design__title" data-design-title>Build professional</h2>
-        <h2 class="design__title" data-design-title>valuable room for you</h2>
+        <div class="block__design__title">
+            <h2 class="design__title" data-design-title>Build professional</h2>
+            <h2 class="design__title" data-design-title>valuable room for you</h2>
+        </div>
         <div class="design">
             <picture>
                 <source srcset="2x/kitchen_2x.png 2x">
@@ -96,14 +98,14 @@
         <h2 class="archmove__title" data-archmove-title>with Archmove</h2>
         <div class="archmove">
             <div>
-                <picture>
+                <picture class="archmove__photo">
                     <source srcset="2x/meeting_2x.png 2x">
                     <img src="1x/meeting_1x.png" alt="meeting">
                 </picture>
             </div>
             <div class="archmove__content">
                 <div class="archmove__content__part--bird">
-                    <svg width="48" height="56" class="archmove__icon--bird">
+                    <svg width="48" height="56" class="archmove__icon--bird day">
                         <use xlink:href="sprite.svg#bird"></use>
                     </svg>
                     <div class="archmove__content__part--text" data-archmove-text>
@@ -116,7 +118,7 @@
                     </div>
                 </div>
                 <div class="archmove__content__part">
-                    <svg width="39" height="48" class="archmove__icon">
+                    <svg width="39" height="48" class="archmove__icon day">
                         <use xlink:href="sprite.svg#dollar"></use>
                     </svg>
                     <div class="archmove__content__part--text" data-archmove-text>
@@ -128,7 +130,7 @@
                     </div>
                 </div>
                 <div class="archmove__content__part">
-                    <svg width="40" height="53" class="archmove__icon">
+                    <svg width="40" height="53" class="archmove__icon day">
                         <use xlink:href="sprite.svg#circle"></use>
                     </svg>
                     <div class="archmove__content__part--text" data-archmove-text>
