--- a/homeworks/maksym.selenkov_MaksymSelenkov/8-css-variables/index.html
+++ b/homeworks/maksym.selenkov_MaksymSelenkov/8-css-variables/index.html
@@ -37,17 +37,21 @@
                     <h1 class="start__heading">
                         Build Your Dream <span class="carrot-word">House</span>
                     </h1>
-                    <p class="start__message">The first and most trusted marketplace of design & build house in The World. 100% guaranteed Build safe, comfortable and transparent with a project management for the best result</p>
-                    <button class="start__button" type="button">Free Consultation</button>
-                    <img class="start__image" src="img/start.jpg" alt="">
+                    <section class="start__content">
+                        <section class="start__form">
+                            <p class="start__message">The first and most trusted marketplace of design & build house in The World. 100% guaranteed Build safe, comfortable and transparent with a project management for the best result</p>
+                            <button class="start__button" type="button">Free Consultation</button>
+                        </section>
+                        <img class="start__image" src="img/start.jpg" alt="">
+                    </section>
                 </section>
                 <section class="page__rooms rooms">
                     <h2 class="rooms__heading">Build professional valuable room for you</h2>
                     <section class="rooms__gallery">
-                        <img class="rooms__image" src="img/img-01.jpg" alt="room1">
-                        <img class="rooms__image" src="img/img-02.jpg" alt="room2">
-                        <img class="rooms__image" src="img/img-03.jpg" alt="room3">
-                        <img class="rooms__image" src="img/img-04.jpg" alt="room4">
+                        <img class="rooms__image" src="img/img-01.jpg" alt="room1" width="305">
+                        <img class="rooms__image" src="img/img-02.jpg" alt="room2" width="305">
+                        <img class="rooms__image" src="img/img-03.jpg" alt="room3" width="305">
+                        <img class="rooms__image" src="img/img-04.jpg" alt="room4" width="305">
                     </section>
                 </section>
                 <section class="page__needs needs">
