--- a/homeworks/nikolay.krasniuk_Kingstar22/6-adaptive/index.html
+++ b/homeworks/nikolay.krasniuk_Kingstar22/6-adaptive/index.html
@@ -278,3 +278,14 @@
         </footer>
     </body>
 </html>
+
+<section class="project container">
+    <picture class="project__picture">
+        <source srcset="img/img-5_2x.png">
+        <img class="project__picture-img" src="img/img-5.png" alt="img">
+    </picture>
+    <main class="project__content">
+        <h2 class="project__content-title">Realize your dream project with Archmove</h2>
+        <button type="button" class="project__content-btn btn">FREE CONSULTATION</button>
+    </main>
+</section>
