--- a/homeworks/vladyslav.kovalov_kovalov/8-css-variables/index.html
+++ b/homeworks/vladyslav.kovalov_kovalov/8-css-variables/index.html
@@ -12,63 +12,63 @@
         <title>Archmove | Architech Marketplace?</title>
     </head>
     <body data-page-container data-theme="light">
-        <header class="header page-section">
-            <div class="header__container page-container page-container--large">
-                <a href="#" class="page-link header__link page-logo header__logo">
-                    <svg class="page-logo__icon">
+        <header class="header">
+            <div class="header__container">
+                <a href="#" class="header__logo">
+                    <svg class="header__icon">
                         <use href="icons/logo.svg#logo"></use>
                     </svg>
                 </a>
-                <nav class="header__navigation page-navigation">
-                    <ul class="header__list page-list page-navigation__list">
-                        <li class="page-navigation__item">
-                            <a href="#" class="page-navigation__link page-link">
+                <nav class="header__navigation">
+                    <ul class="header__list">
+                        <li class="header__list-item">
+                            <a href="#" class="header__link">
                                 Design Gallery
                             </a>
                         </li>
-                        <li class="page-navigation__item">
-                            <a href="#" class="page-navigation__link page-link">
+                        <li class="header__list-item">
+                            <a href="#" class="header__link">
                                 List of Architect
                             </a>
                         </li>
-                        <li class="page-navigation__item">
-                            <a href="#" class="page-navigation__link page-link">
+                        <li class="header__list-item">
+                            <a href="#" class="header__link">
                                 Articles
                             </a>
                         </li>
-                        <li class="page-navigation__item">
-                            <a href="#" class="page-navigation__link page-link">
+                        <li class="header__list-item">
+                            <a href="#" class="header__link">
                                 How it Works
                             </a>
                         </li>
                     </ul>
                 </nav>
                 <div class="header__actions">
-                    <button data-theme-toggler class="button button--empty header__button button--toggler" type="button">
-                        <svg class="button--toggler__icon">
+                    <button data-theme-toggler class="header__toggler-button" type="button">
+                        <svg class="header__toggler-button-icon">
                             <use data-theme-toggler-icon href="icons/theme-toggler.svg#dark-theme-logo"></use>
                         </svg>
                     </button>
-                    <button class="button button--empty header__button" type="button">
+                    <button class="header__empty-button" type="button">
                         Sign In
                     </button>
-                    <button class="button button--full header__button" type="button">
+                    <button class="header__full-button" type="button">
                         Sign Up
                     </button>
                 </div>
             </div>
         </header>
-        <main class="main-section page-section">
-            <div class="main-section__container page-container">
-                <h1 class="main-section__title title title--large">
-                    Build Your Dream <span class="title--accent">House</span>
+        <main class="main-section">
+            <div class="main-section__container">
+                <h1 class="main-section__title">
+                    Build Your Dream <span class="main-section__title--accent">House</span>
                 </h1>
                 <div class="main-section__hero-container">
                     <div class="main-section__hero-text">
                         <p class="main-section__lead">
                             The first and most trusted marketplace of design & build house in The World. 100% guaranteed Build safe, comfortable and transparent with a project management for the best result
                         </p>
-                        <button class="button main-section__button button--full" type="button">Free Consultation</button>
+                        <button class="main-section__full-button" type="button">Free Consultation</button>
                     </div>
                     <picture class="main-section__hero-image">
                         <source srcset="images/hero-image-x2.jpg 2x">
@@ -77,9 +77,9 @@
                 </div>
             </div>
         </main>
-        <section class="gallery-section page-section">
-            <div class="gallery-section__container page-container page-container--large">
-                <h2 class="gallery-section__title title">
+        <section class="gallery-section">
+            <div class="gallery-section__container">
+                <h2 class="gallery-section__title">
                     Build professional valuable room for you
                 </h2>
                 <div class="gallery-section__images-container">
@@ -102,9 +102,9 @@
                 </div>
             </div>
         </section>
-        <section class="features-section page-section">
-            <div class="features-section__container page-container">
-                <h2 class="features-section__title title">
+        <section class="features-sectionn">
+            <div class="features-section__container">
+                <h2 class="features-section__title">
                     Build your needs with Archmove
                 </h2>
                 <div class="features-section__content">
@@ -113,7 +113,7 @@
                         <img class="features-section__image page-image" src="images/meeting-image.jpg" alt="White sunny room">
                     </picture>
                     <div class="features-section__description">
-                        <ul class="features-section__list page-list">
+                        <ul class="features-section__list">
                             <li class="features-section__list-item">
                                 <svg class="features-section__icon" viewBox="0 0 48 56" xmlns="http://www.w3.org/2000/svg">
                                     <path class="features-section__icon-layer-1"
@@ -162,54 +162,54 @@
                 </div>
             </div>
         </section>
-        <footer class="footer-section page-section">
-            <div class="footer-section__container page-container">
+        <footer class="footer-section">
+            <div class="footer-section__container">
                 <div class="footer-section__main">
                     <picture class="footer-section__image-container">
                         <source srcset="images/consultation-image-x2.png 2x">
                         <img class="footer-section__image" src="images/consultation-image.png" alt="White sunny room">
                     </picture>
                     <div class="footer-section__text-content">
-                        <h3 class="footer-section__title title">
+                        <h3 class="footer-section__title">
                             Realize your dream project with <span class="title--accent">Archmove</span>
                         </h3>
-                        <button class="footer-section__button button button--full" type="button">FREE CONSULTATION</button>
+                        <button class="footer-section__full-button" type="button">FREE CONSULTATION</button>
                     </div>
                 </div>
             </div>
             <div class="footer-section__footer">
-                <div class="footer-section__container page-container footer-section__footer-container">
-                    <nav class="footer-section__navigation page-navigation">
-                        <ul class="footer-section__list page-list page-navigation__list">
-                            <li class="page-navigation__item">
-                                <a href="#" class="page-navigation__link page-link">
+                <div class="footer-section__container footer-section__footer-container">
+                    <nav class="footer-section__navigation">
+                        <ul class="footer-section__list">
+                            <li class="footer-section__list-item">
+                                <a href="#" class="footer-section__link page-link">
                                     About Us
                                 </a>
                             </li>
-                            <li class="page-navigation__item">
-                                <a href="#" class="page-navigation__link page-link">
+                            <li class="footer-section__list-item">
+                                <a href="#" class="footer-section__link">
                                     How it Works
                                 </a>
                             </li>
-                            <li class="page-navigation__item">
-                                <a href="#" class="page-navigation__link page-link">
+                            <li class="footer-section__list-item">
+                                <a href="#" class="footer-section__link">
                                     FAQ
                                 </a>
                             </li>
-                            <li class="page-navigation__item">
-                                <a href="#" class="page-navigation__link page-link">
+                            <li class="footer-section__list-item">
+                                <a href="#" class="footer-section__link">
                                     Contact Us
                                 </a>
                             </li>
-                            <li class="page-navigation__item">
-                                <a href="#" class="page-navigation__link page-link">
+                            <li class="footer-section__list-item">
+                                <a href="#" class="footer-section__link">
                                     Privacy Policy
                                 </a>
                             </li>
                         </ul>
                     </nav>
-                    <a href="#" class="page-link footer-section__link page-logo footer-section__logo">
-                        <svg class="page-logo__icon">
+                    <a href="#" class="footer-section__logo">
+                        <svg class="footer-section__icon">
                             <use href="icons/logo.svg#logo"></use>
                         </svg>
                     </a>
