--- a/homeworks/dmytro.kondaurov_DmitriyKondaurov/8-css-variables/index.html
+++ b/homeworks/dmytro.kondaurov_DmitriyKondaurov/8-css-variables/index.html
@@ -34,6 +34,10 @@
                             <a class="list__link" href="#">How it Works </a>
                         </li>
                     </ul>
+                    <button type="button" class="header-menu__switcher switcher" data-menu-switcher-btn="1">
+                        <span class="switcher__cross-line" data-cross-line-1></span>
+                        <span class="switcher__cross-line" data-cross-line-2></span>
+                    </button>
                 </nav>
                 <div class="header__control-buttons">
                     <button class="button header__theme-switcher" type="button">
@@ -128,7 +132,7 @@
             </main>
             <footer class="footer">
                 <nav class="footer__nav nav-menu">
-                    <ul class="nav-menu__list list">
+                    <ul class="nav-menu__list list hide" data-header-menu="0">
                         <li class="list__item">
                             <a class="list__link" href="#"> About Us</a>
                         </li>
@@ -145,6 +149,10 @@
                             <a class="list__link" href="#"> Privacy Policy</a>
                         </li>
                     </ul>
+                    <button type="button" class="footer-menu__switcher switcher" data-menu-switcher-btn="1">
+                        <span class="switcher__cross-line" data-cross-line-1></span>
+                        <span class="switcher__cross-line" data-cross-line-2></span>
+                    </button>
                 </nav>
                 <a class="footer__logo" href="#">
                     <img src="./images/logo-arch.png" alt="logo" width="62" height="28">
