fix footer mobile menu

--- a/homeworks/dmytro.kondaurov_DmitriyKondaurov/8-css-variables/index.html
+++ b/homeworks/dmytro.kondaurov_DmitriyKondaurov/8-css-variables/index.html
@@ -19,8 +19,8 @@
                 <a class="header__logo" href="#">
                     <img src="./images/logo-arch.png" alt="logo">
                 </a>
-                <nav class="header__nav nav-menu">
-                    <ul class="nav-menu__list list">
+                <nav class="header__nav nav-menu ">
+                    <ul class="nav-menu__list list--visibility-toggle">
                         <li class="list__item">
                             <a class="list__link" href="#">Design Gallery </a>
                         </li>
@@ -132,7 +132,7 @@
             </main>
             <footer class="footer">
                 <nav class="footer__nav nav-menu">
-                    <ul class="nav-menu__list list hide" data-header-menu="0">
+                    <ul class="nav-menu__list nav-menu__list--mobile-hide" data-header-menu="0">
                         <li class="list__item">
                             <a class="list__link" href="#"> About Us</a>
                         </li>
@@ -149,10 +149,6 @@
                             <a class="list__link" href="#"> Privacy Policy</a>
                         </li>
                     </ul>
-                    <button type="button" class="footer-menu__switcher switcher" data-menu-switcher-btn="1">
-                        <span class="switcher__cross-line" data-cross-line-1></span>
-                        <span class="switcher__cross-line" data-cross-line-2></span>
-                    </button>
                 </nav>
                 <a class="footer__logo" href="#">
                     <img src="./images/logo-arch.png" alt="logo" width="62" height="28">
