resolve style and alt issues

--- a/homeworks/konstantin.rusenko_ConstantinRusenko/8-css-variables/index.html
+++ b/homeworks/konstantin.rusenko_ConstantinRusenko/8-css-variables/index.html
@@ -62,7 +62,7 @@
                         <img class="cosultation__image image" 
                             src="src/image/consultation.png"
                             srcset="src/image/consultation-retina.png 2x"
-                            alt="first.png">
+                            alt="consultation.png">
                     </div>
                 </div>
             </section>
@@ -75,25 +75,25 @@
                         <img class="gallery__image"
                             src="src/image/img-01.png"
                             srcset="src/image/img-01-retina.png 2x"
-                            alt="second.png">
+                            alt="first-room-example.png">
                     </li>
                     <li class="gallery__image-block">
                         <img class="gallery__image"
                             src="src/image/img-02.png"
                             srcset="src/image/img-02-retina.png 2x"
-                            alt="third.png">
+                            alt="second-room-example.png">
                     </li>
                     <li class="gallery__image-block">
                         <img class="gallery__image"
                             src="src/image/img-03.png"
                             srcset="src/image/img-03-retina.png 2x"
-                            alt="fourth.png">
+                            alt="third-room-example.png">
                     </li>
                     <li class="gallery__image-block">
                         <img class="gallery__image"
                             src="src/image/img-04.png"
                             srcset="src/image/img-04-retina.png 2x"
-                            alt="fifth.png">
+                            alt="fourth-room-example.png">
                     </li>
                 </ul>
             </section>
@@ -106,7 +106,7 @@
                         <img class="advantages__image image"
                             src="src/image/company.png"
                             srcset="src/image/company-retina.png 2x"
-                            alt="sixth.png">
+                            alt="group-of-people.png">
                     </div>
                     <div class="block__right">
                         <ul class="advantages__list lists">
@@ -148,11 +148,11 @@
                         <img class="realize__image image"
                             src="src/image/house.png"
                             srcset="src/image/house-retina.png 2x"
-                            alt="seventh.png">
+                            alt="house.png">
                     </div>
                     <div class="realize__block">
                         <div class="realize__title">
-                            <h2 class="realize__subtitile subtitile">Realize your dream project with
+                            <h2 class="realize__subtitile subtitle">Realize your dream project with
                                 <span class="red-text">Archmove</span>
                             </h2>
                         </div>
