responsive menu done

--- a/homeworks/dmytro.kondaurov_DmitriyKondaurov/8-css-variables/index.html
+++ b/homeworks/dmytro.kondaurov_DmitriyKondaurov/8-css-variables/index.html
@@ -20,18 +20,18 @@
                     <img src="./images/logo-arch.png" alt="logo">
                 </a>
                 <nav class="header__nav nav-menu ">
-                    <ul class="nav-menu__list list--visibility-toggle">
+                    <ul class="nav-menu__list list--visibility-hide" data-header-menu="0">
                         <li class="list__item">
-                            <a class="list__link" href="#">Design Gallery </a>
+                            <a class="list__link" href="#" data-nav-item>Design Gallery </a>
                         </li>
                         <li class="list__item">
-                            <a class="list__link" href="#">List of Architect </a>
+                            <a class="list__link" href="#" data-nav-item>List of Architect </a>
                         </li>
                         <li class="list__item">
-                            <a class="list__link" href="#">Articles </a>
+                            <a class="list__link" href="#" data-nav-item>Articles </a>
                         </li>
                         <li class="list__item">
-                            <a class="list__link" href="#">How it Works </a>
+                            <a class="list__link" href="#" data-nav-item>How it Works </a>
                         </li>
                     </ul>
                     <button type="button" class="header-menu__switcher switcher" data-menu-switcher-btn="1">
