add header scrolled background

--- a/homeworks/dmytro.kondaurov_DmitriyKondaurov/8-css-variables/index.html
+++ b/homeworks/dmytro.kondaurov_DmitriyKondaurov/8-css-variables/index.html
@@ -15,7 +15,7 @@
     </head>
     <body>
         <div class="wrapper">
-            <header class="header">
+            <header class="header" data-header>
                 <a class="header__logo" href="#">
                     <img src="./images/logo-arch.png" alt="logo">
                 </a>
