fixed mistakes with colour

--- a/homeworks/Andrii.Morozov_AndriiMorozov88/8-css-variables/index_variables.html
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/8-css-variables/index_variables.html
@@ -51,7 +51,7 @@
         </header>
         <div class="dreamhouse__title-container">
             <h1 class="dreamhouse__title-container__title" data-dreamhouse-title>
-                Build Your Dream <span data-word-house class="word--color day">House</span>
+                Build Your Dream <span class="word--color day">House</span>
             </h1>
         </div>
         <div class="dreamhouse">
@@ -107,7 +107,7 @@
             </div>
             <div class="archmove__content">
                 <div class="archmove__content__part--bird">
-                    <svg width="48" height="56" class="archmove__icon--bird day">
+                    <svg width="48" height="56" class="archmove__icon--bird day" data-icon-bird>
                         <use xlink:href="sprite.svg#bird"></use>
                     </svg>
                     <div class="archmove__content__part--text" data-archmove-text>
@@ -120,7 +120,7 @@
                     </div>
                 </div>
                 <div class="archmove__content__part">
-                    <svg width="39" height="48" class="archmove__icon day">
+                    <svg width="39" height="48" class="archmove__icon day" data-icon-dollar>
                         <use xlink:href="sprite.svg#dollar"></use>
                     </svg>
                     <div class="archmove__content__part--text" data-archmove-text>
@@ -132,7 +132,7 @@
                     </div>
                 </div>
                 <div class="archmove__content__part">
-                    <svg width="40" height="53" class="archmove__icon day">
+                    <svg width="40" height="53" class="archmove__icon day" data-icon-circle="">
                         <use xlink:href="sprite.svg#circle"></use>
                     </svg>
                     <div class="archmove__content__part--text" data-archmove-text>
@@ -163,7 +163,7 @@
                         </p>
                         <p>
                             <b>project with
-                                <span class="word--color day" data-word-archmove>Archmove</span>
+                                <span class="word--color day">Archmove</span>
                             </b>
                         </p>
                     </div>
