changed padding margin

--- a/homeworks/vladyslav.kovalov_kovalov/8-css-variables/index.html
+++ b/homeworks/vladyslav.kovalov_kovalov/8-css-variables/index.html
@@ -102,7 +102,7 @@
                 </div>
             </div>
         </section>
-        <section class="features-sectionn">
+        <section class="features-section">
             <div class="features-section__container">
                 <h2 class="features-section__title">
                     Build your needs with Archmove
