--- a/homeworks/oleksandr.prylutskiy_SanSandru4/8-css-variables/index.html
+++ b/homeworks/oleksandr.prylutskiy_SanSandru4/8-css-variables/index.html
@@ -8,17 +8,18 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@700&family=Roboto:wght@400;700;900&display=swap" rel="stylesheet">
-        <title>Document</title>
+        <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+        <title>Archmove</title>
     </head>
     <body>
         <div class="wrapper">
             <header class="header">
                 <div class="header__nav">
-                    <div class="header__logo">
+                    <a class="header__logo" href="#">
                         <svg class="logo">
                             <use xlink:href="#logo"></use>
                         </svg>
-                    </div>
+                    </a>
                     <div class="header__menu">
                         <a href="#Design Gallery" class="header__menu-link">Design Gallery</a>
                         <a href="#List of Architect" class="header__menu-link">List of Architect</a>
@@ -32,75 +33,75 @@
                             <use xlink:href="#moon" data-attr-icon></use>
                         </svg>
                     </button>
-                    <div class="header__control_sign-in">
-                        <a href="#" class="header__control_sign-in">Sign in</a>
+                    <div class="header__control">
+                        <a href="#" class="header__control-sign-in">Sign in</a>
                     </div>
                     <button class="header__btn" type="button">Sign Up</button>
                 </div>
             </header>
             <main class="main">
                 <div class="main__dream-house">
-                    <h1 class="main__dream-house_name">
+                    <h1 class="main__dream-house-name">
                         Build Your Dream <span class="main__color-word">House</span>
                     </h1>
-                    <div class="main__dream-house_info">
+                    <div class="main__dream-house-info">
                         <p class="dream-house__text">
                             The first and most trusted marketplace of design & build house in The World. 100% guaranteed Build safe, comfortable and transparent with a project management for the best result
                         </p>
                         <button class="dream-house__btn" type="button">Free Consultation</button>
                     </div>
-                    <div class="main__dream-house_picture">
+                    <div class="main__dream-house-picture">
                         <img class="dream-house__img" src="img/Rectangle 1.jpg" alt="dream house">
                     </div>
                 </div>
                 <div class="main__build-room">
-                    <h3 class="main__build-room_name">Build professional valuable room for you</h3>
-                    <div class="main__build-room_picture">
-                        <img class="build-room__img" src="img/img-01.jpg" alt="room 1">
-                        <img class="build-room__img" src="img/img-02.jpg" alt="room 2">
-                        <img class="build-room__img" src="img/img-03.jpg" alt="room 3">
-                        <img class="build-room__img" src="img/img-04.jpg" alt="room 4">
+                    <h3 class="main__build-room-name">Build professional valuable room for you</h3>
+                    <div class="main__build-room-picture">
+                        <img class="build-room__picture-img" src="img/img-01.jpg" alt="room 1">
+                        <img class="build-room__picture-img" src="img/img-02.jpg" alt="room 2">
+                        <img class="build-room__picture-img" src="img/img-03.jpg" alt="room 3">
+                        <img class="build-room__picture-img" src="img/img-04.jpg" alt="room 4">
                     </div>
                 </div>
                 <div class="main__archmove">
-                    <h3 class="main__archmove_name">Build your needs with Archmove</h3>
-                    <div class="main__archmove_info">
-                        <div class="main__archmove_picture">
+                    <h3 class="main__archmove-name">Build your needs with Archmove</h3>
+                    <div class="main__archmove-info">
+                        <div class="main__archmove-picture">
                             <img src="img/img-5.jpg" alt="archmove">
                         </div>
-                        <div class="main__archmove_consultation">
+                        <div class="main__archmove-consultation">
                             <ul class="consultation__list">
-                                <li class="consultation__list_info">
-                                    <div class="list__img">
+                                <li class="consultation__list-info">
+                                    <div class="list__info-img">
                                         <svg class="guaranteed">
                                             <use xlink:href="#guaranteed"></use>
                                         </svg>
                                     </div>
-                                    <div class="list_text">
-                                        <p class="list_name">100% guaranteed project completion</p>
-                                        <p class="list_paragraph">Build safe, comfortable and transparent with a project management application with a joint account.</p>
+                                    <div class="list__info-text">
+                                        <p class="list__info-name">100% guaranteed project completion</p>
+                                        <p class="list__info-paragraph">Build safe, comfortable and transparent with a project management application with a joint account.</p>
                                     </div>
                                 </li>
-                                <li class="consultation__list_info">
-                                    <div class="list__img">
+                                <li class="consultation__list-info">
+                                    <div class="list__info-img">
                                         <svg class="fees">
                                             <use xlink:href="#fees"></use>
                                         </svg>
                                     </div>
-                                    <div class="list_text">
-                                        <p class="list_name">No additional fees</p>
-                                        <p class="list_paragraph">There are no hidden costs. The value of the offer you get is the value you paid.</p>
+                                    <div class="list__info-text">
+                                        <p class="list__info-name">No additional fees</p>
+                                        <p class="list__info-paragraph">There are no hidden costs. The value of the offer you get is the value you paid.</p>
                                     </div>
                                 </li>
-                                <li class="consultation__list_info">
-                                    <div class="list__img">
+                                <li class="consultation__list-info">
+                                    <div class="list__info-img">
                                         <svg class="escort">
                                             <use xlink:href="#escort"></use>
                                         </svg>
                                     </div>
-                                    <div class="list_text">
-                                        <p class="list_name">Get escort from the Team</p>
-                                        <p class="list_paragraph">Monitor reports from the Arsitag team who check directly in the field.</p>
+                                    <div class="list__info-text">
+                                        <p class="list__info-name">Get escort from the Team</p>
+                                        <p class="list__info-paragraph">Monitor reports from the Arsitag team who check directly in the field.</p>
                                     </div>
                                 </li>
                             </ul>
@@ -109,11 +110,11 @@
                     </div>
                 </div>
                 <div class="main__realize-dream">
-                    <div class="main__realize-dream_img">
+                    <div class="main__realize-dream-img">
                         <img src="img/img.png" alt="house in the sky">
                     </div>
-                    <div class="main__realize-dream_text">
-                        <h3 class="main__realize-dream_name">
+                    <div class="main__realize-dream-text">
+                        <h3 class="main__realize-dream-name">
                             Realize your dream project with <span class="main__color-word">Archmove</span>
                         </h3>
                         <button class="free-consultation__btn free-consultation__btn--no-margin" type="button">FREE CONSULTATION</button>
@@ -128,11 +129,11 @@
                     <a class="footer__menu-link" href="#Contact Us">Contact Us</a>
                     <a class="footer__menu-link" href="#Privacy Policy">Privacy Policy</a>
                 </div>
-                <div class="footer_logo">
+                <a class="footer__logo" href="#">
                     <svg class="logo">
                         <use xlink:href="#logo"></use>
                     </svg>
-                </div>
+                </a>
             </footer>
         </div>
 
