--- a/homeworks/nikolay.krasniuk_Kingstar22/8-css-variables/index.html
+++ b/homeworks/nikolay.krasniuk_Kingstar22/8-css-variables/index.html
@@ -43,7 +43,7 @@
 
         <header class="header container">
             <div class="header__wrapper">
-                <img src="img/icons/logo.svg" alt="logo">
+                <img class="header__logo " src="img/icons/logo.svg" alt="logo">
                 <nav data-menu class="header__menu">
                     <ul class="header__items">
                         <li class="header__item">
@@ -60,9 +60,9 @@
                         </li>
                     </ul>
                 </nav>
-            </div>
-            <div data-header-burger class="header__burger">
-                <span class="header__burger-line"></span>
+                <div data-header-burger class="header__burger">
+                    <span class="header__burger-line"></span>
+                </div>
             </div>
             <div class="header__btns">
                 <button data-btn type="button" class="header__btns-theme btn">
@@ -181,7 +181,7 @@
                         <a class="footer__item-link" href="#">Privacy Policy</a>
                     </li>
                 </ul>
-                <img src="img/icons/logo.svg" alt="logo">
+                <img class="footer__logo" src="img/icons/logo.svg" alt="logo">
             </footer>
         </div>
         <script src="script.js"></script>
